# Cloud-Native-AI

./: CLAUDE.md  README.md
.claude/: settings.local.json
.claude/skills/: pytest-mastery.skill
hello-fastapi/: .gitignore  README.md  pyproject.toml
test_task_Hello_World/: .coverage  main.py  pyproject.toml
test_task_Hello_World/tests/: conftest.py  test_main.py
